kubernetes/server/overlays/dev/ingress_patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: recipe-manager-api
  annotations:
    alb.ingress.kubernetes.io/tags: environment=dev,app=recipe-manager
    alb.ingress.kubernetes.io/load-balancer-name: recipe-manager-api-lb-dev
    # certificate-arn is a Terraform output; injected at deploy time by deploy-server-eks.sh
    alb.ingress.kubernetes.io/certificate-arn: DEPLOY_TIME_API_CERTIFICATE_ARN
    # ExternalDNS annotation to create Route53 A record for the API domain to the ALB
    external-dns.alpha.kubernetes.io/hostname: api.recipemanager.link
spec:
  rules:
    - host: api.recipemanager.link
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: recipe-manager-api
                port:
                  number: 80
